--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <section class="places">
         <div class="place">
-          <h3 class="place__title"><a class="place__title_el_link" href="http://park-kosa.ru">Куршская коса</a></h3>
+          <h3 class="place__title">Куршская коса</h3>
           <div class="place__website">
             <a class="place__url-heading">URL</a>
             <a class="place__link" href="http://www.park-kosa.ru/">park-kosa.ru</a>
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="place">
-          <h3 class="place__title"><a class="place__title_el_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">Кольский</a></h3>
+          <h3 class="place__title">Кольский</h3>
           <div class="place__website">
             <a class="place__url-heading">URL</a>
             <a class="place__link" href="https://www.nationalgeographic.com/">National Geographic</a>
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="place">
-          <h3 class="place__title"><a class="place__title_el_link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">Алтай</a></h3>
+          <h3 class="place__title">Алтай</h3>
           <div class="place__website">
             <a class="place__url-heading">URL</a>
             <a class="place__link" href="https://www.youtube.com/">YouTube</a>
@@ -89,7 +89,7 @@
           </div>    
         </div>
         <div class="place">
-          <h3 class="place__title"><a class="place__title_el_link" href="https://vk.com/baikalmile">Зимний Байкал</a></h3>
+          <h3 class="place__title">Зимний Байкал</h3>
           <div class="place__website">
             <a class="place__url-heading">URL</a>
             <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="place">
-          <h3 class="place__title"><a class="place__title_el_link" href="http://vodlozero.ru">Карелия</a></h3>
+          <h3 class="place__title">Карелия</h3>
           <div class="place__website">
             <a class="place__url-heading">URL</a>
             <a class="place__link" href="http://vodlozero.ru/">http://vodlozero.ru/</a>
@@ -118,7 +118,7 @@
       </section>
 
       <section class="cover">
-        <h2 class="cover__title"><a class="cover__title_link" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a></h2>
+        <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
       </section>
     </main>
