--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
         <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов <span class="intro__list_regular">11</span></li>
-          <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_regular">12</span></li> 
-          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_regular">16</span></li> 
-          <li>Природных заповедников <span class="intro__list_regular">105</span></li> 
-          <li>Аэропортов <span class="intro__list_regular">241</span></li> 
+          <li>Часовых поясов <span class="intro__list-regular">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-regular">12</span></li> 
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-regular">16</span></li> 
+          <li>Природных заповедников <span class="intro__list-regular">105</span></li> 
+          <li>Аэропортов <span class="intro__list-regular">241</span></li> 
         </ul>
     </section>
 
@@ -117,7 +117,7 @@
 
     <section class="cover">
       <h2 class="cover__title">
-        <a class="cover__title_link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</a>
+        <a class="cover__title-link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</a>
       </h2>
       <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
     </section>
