--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
     </section>
 
     <section class="cover">
-      <h2 class="cover__title">
-        <a class="cover__title-link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</a>
-      </h2>
-      <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
+      <a class="cover-link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+        <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>        
+        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
+      </a>
     </section>
   </main>
 
